src/renderer/scss/MainRouteRenderer.scss
@import "variables";
@import "./Logging.scss";

.node {
    &:hover {
        fill: $tt-light-gray;
    }
}

.node-type-d {
    fill: $c-dram;
    background-color: $c-dram;
}

.node-type-c {
    fill: $c-core;
    background-color: $c-core;
}

.node-type-hc {
    fill: $hc-core;
    background-color: $hc-core;

    &.node-type-label::before {
        --line-thickness: 1px;

        content: '';
        position: absolute;
        inset: 0;
        background-image: linear-gradient(
            -45deg,
            transparent calc(50% - var(--line-thickness)),
            $tt-very-dark-gray calc(50% - var(--line-thickness)),
            $tt-very-dark-gray calc(50% + var(--line-thickness)),
            transparent calc(50% + var(--line-thickness))
        );
    }
}

.node-type-r {
    fill: $c-router;
    background-color: $c-router;
}

.node-type-e {
    fill: $c-eth;
    background-color: $c-eth;
}

.node-type-p {
    fill: $c-pcix;
    background-color: $c-pcix;
}

.node-type {
    border-bottom: 2px solid transparent;

    &.detailed-view {
        border-bottom: 2px solid $bright-highlight;
    }
}

$dock-height: 420px;

.main-route {
    --sidebar-width: 30px;
    --controls-panel-width: 230px;
    --properties-panel-width: 450px;

    --top-bar-height: 50px;
    --bottom-dock-height: 0;

    display: grid;
    grid-template-columns: var(--sidebar-width) var(--controls-panel-width) 1fr var(--properties-panel-width);
    grid-template-rows: var(--top-bar-height) 1fr var(--bottom-dock-height);
    grid-template-areas:
        "top-bar top-bar top-bar top-bar"
        "sidebar controls main properties"
        "bottom-dock bottom-dock bottom-dock bottom-dock";
    gap: 10px;
    padding: 10px;
    height: 100vh;
    width: 100vw;

    .header {
        grid-area: top-bar;
        margin: 0;
    }

    .sidebar { grid-area: sidebar; }
    .grid-sidebar { grid-area: controls; }
    .main-content {
        grid-area: main;
        overflow: auto;
    }
    .properties-panel { grid-area: properties; }

    .bottom-dock {
        grid-area: bottom-dock;
        display: none;
    }

    &.dock-open {
        --bottom-dock-height: 340px;

        height: calc(100vh - 20px);

        .bottom-dock { display: block; }
    }

    &.detailed-view-open {
        --bottom-dock-height: 340px;

        height: calc(100vh - 20px);
        grid-template-areas:
        "top-bar top-bar top-bar top-bar"
        "sidebar controls main properties"
        "bottom-dock bottom-dock bottom-dock properties";
    }
}

.outer-wrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    overflow: hidden;


    .dock {
        margin: 0 20px;
        width: calc(100% - 40px);
        height: 0px;
        overflow: hidden;
    }

    &.dock-open {
        .dock {
            height: $dock-height - 20px;
            bottom: 0;
        }

        .main-wrapper {
            height: calc(100vh - $dock-height);
            overflow: hidden;
        }

        .grid-container {
            height: calc(100vh - 10px - $dock-height);
        }

        .properties-panel {
            margin-block-end: 10px;
        }

        .properties-panel-nodes {
            max-height: calc(100vh - 70px - $dock-height);
        }

        .list-wrap {
            max-height: calc(100vh - 150px - $dock-height);
        }

        .properties-panel__content .list-wrap {
            max-height: calc(100vh - 120px - $dock-height);
        }

        .inner-sidebar {
            max-height: calc(100vh - 20px - $dock-height);
        }
    }

    &.detailed-view-open {
        .inner-sidebar {
            max-height: calc(100vh - 640px);
        }

        .grid-container {
            height: calc(100vh - 640px);
        }
    }
}

.main-wrapper {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.main-container {
    display: flex;
    gap: 50px;
    width: calc(100% - 100px);
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.inner-sidebar {
    // max-height: calc(100vh - 100px);
    overflow-y: auto;
    scrollbar-gutter: stable;
    min-width: 220px;
    overflow-x: hidden;

    .inner-sidebar-wrap {
        display: flex;
        flex-direction: column;
        margin-inline: 10px 20px;

        .congestion-legend {
            width: calc(100% - 10px);
            height: 3px;
        }

        .bp4-slider {
            width: calc(100% - 10px);
        }
    }

    hr {
        border: none;
        width: 100%;
        border-top: 1px solid $hr;

    }

    .bp4-numeric-input {
        .bp4-input-group {
            max-width: 150px;
        }
    }
}
/* ... */

